# Surrogate-Model-in-SD

./: '  .gitignore  CMakeLists.txt  Doxyfile  README.md  ]
SMSD_kernel/: CMakeLists.txt
SMSD_kernel/declarations/: Surrogate_MassSpringDamper.hpp
SMSD_kernel/implementations/: MassSpringDamper_DMCS.cpp  MassSpringDamper_IPCE.cpp  MassSpringDamper_IRPCE.cpp  MassSpringDamper_NIPCE.cpp  MassSpringDamper_NIRPCE.cpp
SMSD_kernel/modules/: CMakeLists.txt
SMSD_kernel/modules/AnalyticalModel/declarations/: AnalyticalModel.hpp
SMSD_kernel/modules/AnalyticalModel/utility/: LibrariesLoader_AM.hpp
SMSD_kernel/modules/BasisFunctions/test/: HermitePolynomials_test.cpp
SMSD_kernel/modules/MonteCarlo/implementations/: AnalyticalModel_imp.hpp
SMSD_kernel/test/: testrunner.cpp
SMSD_kernel/utility/: LibrariesLoader_SM.hpp
app/: IntrusivePCE.ipynb  IntrusivePCE.md  TechnicalReference.ipynb  TechnicalReference.md
app/report/: literature.bib~  report-blx.bib  report.aux  report.blg  report.fdb_latexmk  report.fls  report.run.xml  report.tex
app/report/codes/: example.cpp
app/report/includes/: packages.tex  title_page.tex
app/report/sections/: 00_introduction.tex  01_sec1.tex  02_sec2.tex  99_appendix.tex  99_conclusions.tex
app/report/subsections/: 02_ssec1.aux  02_ssec1.tex  02_ssec2.tex
declarations/: SurrogateModel.hpp
docs/: _analytical_model__test_8cpp.html  _basis_functions_8hpp.html  _basis_functions_8hpp_source.html  _hermite_polynomials__imp_8hpp.js  _hermite_polynomials__test_8cpp.html  _latin_hypercube_sampling__imp_8hpp.js  _libraries_loader___b_f_8hpp.html  _monte_carlo_8hpp_source.html  _multi_index__imp_8hpp_source.html  _multi_index__test_8cpp.html  _triple_hermite__imp_8hpp.js  _triple_hermite__imp_8hpp_source.html  _triple_hermite__test_8cpp.html  _truncations__imp_8hpp.html  dir_4c554f58d8aef3529e843b20587b2e39.js  dir_786fddf122fdabe0f431904796d74599.html  dir_903711781fde6438841bc3eff779634e.html  files.html  navtreeindex0.js
docs/html/: _basis_functions_8hpp.html  _basis_functions_8hpp_source.html  _hermite_polynomials__imp_8hpp.html  _latin_hypercube_sampling__test_8cpp.html  _libraries_loader___b_f_8hpp_source.html  _libraries_loader___m_c_8hpp_source.html  _monte_carlo_8hpp.html  _monte_carlo_8hpp.js  _multi_index__imp_8hpp.html  _multi_index__imp_8hpp.js  _truncations__imp_8hpp.js  _variable_generation__imp_8hpp.html  _variable_generation__imp_8hpp_source.html  _variable_generation__test_8cpp.html  a00002.html  a00002.js  a00002_source.html  a00005.html  a00005.js  a00006.html  a00008.html  a00008.js  a00009.html  a00009.js  a00010.html  a00011.html  a00011.js  a00011_a3affcb50f9a4962033444008e9e82a20.html  a00011_a44402428a5a904c478d5c9ca5b5a4f29.html  a00011_aa27088a7b2366d73cec8b771dc8dfb75.html  a00011_abc80de9d8a1c9a20814d3df169f66a20.html  a00011_ac5a3b4d632e4ff35da731d6e7129160d.html  a00011_af756b78ec0d20038135375c3349f010a.html  a00011_source.html  a00013.html  a00013.js  a00014.html  a00014.js  a00014_a072335c4801217585fec4a7f87d7de78.html  a00014_ab0b52832baaf84e2e463378914919ea8.html  (+219 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  namespaces_1.js  namespaces_2.js  namespaces_3.js  searchdata.js  typedefs_0.js  (+1 more)
docs/search/: functions_8.js  functions_a.js
driver/: main.cpp
html/: _analytical_model__imp_8hpp_source.html  _basis_functions_8hpp.js  _hermite_polynomials__imp_8hpp_source.html  _latin_hypercube_sampling__imp_8hpp.html  _latin_hypercube_sampling__imp_8hpp_source.html  _libraries_loader___m_c_8hpp.html  _total_truncations__test_8cpp.html  _triple_hermite__imp_8hpp.html  _truncations__imp_8hpp_source.html  _variable_generation__imp_8hpp.js  dir_3e8b8d873bdef3812c64be9ccbf2f77c.html  dir_80c64a4aa09f020f960f7b9596519361.html  dir_e2c816f7f6aff8c634b7f06fb026add2.js  dir_e3d620c6b6fdb93ed3bc6186215bde2e.js  dir_e9482f33a27f61a144b742f884ab6b33.html
html/search/: all_1.js  all_7.js  all_8.js  all_c.js  files_5.js  functions_0.js  functions_5.js  functions_9.js
implementations/: IntrusivePCE.cpp  IntrusiveRPCE.cpp  NonIntrusivePCE.cpp  NonIntrusiveRPCE.cpp
modules/AnalyticalModel/: CMakeLists.txt
modules/AnalyticalModel/declarations/: AnalyticalModel.hpp
modules/AnalyticalModel/implementations/: MassSpringDamper_imp.hpp
modules/AnalyticalModel/test/: MassSpringDamper_test.cpp
modules/BasisFunctions/: CMakeLists.txt
modules/BasisFunctions/declarations/: BasisFunctions.hpp
modules/BasisFunctions/implementations/: TripleHermite_imp.hpp
modules/BasisFunctions/utility/: LibrariesLoader_BF.hpp
modules/MonteCarlo/declarations/: MonteCarlo.hpp
modules/MonteCarlo/implementations/: VariableGeneration_imp.hpp
modules/MonteCarlo/test/: AnalyticalModel_test.cpp
python/: CMakeLists.txt
python/bindings/: SMSD_kernel_python.cpp
python/scripts/: sth.py
test/: testrunner.cpp
